Revert "build and test fixes"
This reverts commit 2c82d29fd3c74d27a7cbc876a1d3ccc38e96b808.